overflow fixed mobile

--- a/style.css
+++ b/style.css
@@ -134,7 +134,17 @@ body{
 }
 
 .prof-img{
-    border: 5px solid whitesmoke
+    height: 250px;
+    width: 250px;
+    border: 5px solid whitesmoke;
+    margin-top: 25px;
+    margin-bottom: 25px;
+
+}
+
+.intro {
+    margin-top: 25px;
+
 }
 
 #sqlite {
@@ -201,6 +211,9 @@ body{
     .card{
         text-align: center;
         border: none !important;
+    }
+    body {
+        overflow-x: hidden;
     }
   }
 
